--- a/5.secure_tunnel.md
+++ b/5.secure_tunnel.md
@@ -59,7 +59,7 @@ aws ec2 run-instances \
 --tag-specifications 'ResourceType=instance,Tags=[{Key=Name,Value=RemoteDevice}]' \
 --block-device-mappings 'DeviceName=/dev/xvda,Ebs={VolumeType=gp3,VolumeSize=8,DeleteOnTermination=true}' \
 --region $AWS_REGION \
---private-ip-address 10.20.1.200 \
+--private-ip-address 10.20.1.110 \
 --user-data file://user-data.txt
 ```
 ## Remote Thing - Destination
@@ -71,7 +71,7 @@ cd
 
 export AWS_REGION=ap-southeast-1
 
-wget https://github.com/xuemark/workshop-iot/raw/master/iot_localproxy.tar.gz
+wget https://github.com/xuemark/workshop-iot-new/raw/master/iot_localproxy.tar.gz
 
 tar -xzvf iot_localproxy.tar.gz
 
@@ -80,21 +80,11 @@ cp libcrypto.so.1.1 /usr/lib64/
 
 ```
 
-### change to password login
-```
-passwd root
-
-sed -i "s#PasswordAuthentication no#PasswordAuthentication yes#" /etc/ssh/sshd_config
-
-systemctl restart sshd
-
-```
-
 ### start localproxy
 ```
 ./localproxy -c ./certs -r $AWS_REGION -d localhost:22 -t <destinationAccessToken>
 ```
-- replace <destinationAccessToken>
+- replace destinationAccessToken
 
 ## Local - Source
 
@@ -104,7 +94,7 @@ sudo su
 cd
 export AWS_REGION=ap-southeast-1
 
-wget https://github.com/xuemark/workshop-iot/raw/master/iot_localproxy.tar.gz
+wget https://github.com/xuemark/workshop-iot-new/raw/master/iot_localproxy.tar.gz
 
 tar -xzvf iot_localproxy.tar.gz
 
@@ -114,40 +104,11 @@ cp libcrypto.so.1.1 /usr/lib64/
 
 ### start localproxy
 ```
-./localproxy -c ./certs -r us-east-1 -s 5555 -t <sourceAccessToken>
+./localproxy -c ./certs -r $AWS_REGION -s 5555 -t <sourceAccessToken>
 ```
-- replace <sourceAccessToken>
+- replace sourceAccessToken
 
 ### ssh login. (need remote thing credential)
 ```
 ssh root@localhost -p 5555
 ```
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-- Access token for source
-
-- ./localproxy -c ./certs -r us-east-1 -s 5555 -t sourceAccessToken
-
-```
-./localproxy -c ./certs -r us-east-1 -s 5555 -t 
-```
-
-
-- ssh login. (need remote thing credential)
-```
-ssh root@localhost -p 5555
-```
-
