--- a/6.job.md
+++ b/6.job.md
@@ -177,12 +177,30 @@ EOF
 ```
 THING_NAME=test_thing
 
-IOT_ENDPOINT=$(aws iot describe-endpoint --endpoint-type iot:Data-ATS| jq -r '.endpointAddress')
+IOT_ENDPOINT=$(aws iot describe-endpoint --endpoint-type iot:Data-ATS --region $AWS_REGION| jq -r '.endpointAddress')
 echo $IOT_ENDPOINT
+```
+
+## IoT Job
+```
+cat <<EOF > job_command.json
+{
+    "command": "reboot" 
+}
+EOF
+
+THING_ARN=$(aws iot describe-thing --thing-name $THING_NAME --region $AWS_REGION|jq -r ".thingArn")
+
+JOB_ID=2
+
+# finally create the job 
+aws iot create-job --job-id $JOB_ID \
+	--targets $THING_ARN --region $AWS_REGION \
+	--document file://job_command.json
+
 ```
 
 ## Run job_agent
 ```
 python3 job_agent.py -t $THING_NAME -e $IOT_ENDPOINT -c $THING_NAME.certificate.pem -k $THING_NAME.private.key -r AmazonRootCA1.pem
 ```
-
