--- a/7.greengrass_v1.md
+++ b/7.greengrass_v1.md
@@ -3,10 +3,10 @@
 refer: https://docs.aws.amazon.com/greengrass/v2/developerguide/getting-started.html
 
 
-## create IAM role for Greengrass group role (optional)
+## create IAM role for Greengrass group role
 
 ```
-ROLE_NAME=IoTRole_Greengrass_v1
+ROLE_NAME=RachetCoreRole
 
 IAM_ROLE_ARN=$(aws iam create-role --role-name $ROLE_NAME --assume-role-policy-document '{"Version": "2012-10-17","Statement": [{"Sid": "","Effect": "Allow","Principal": {"Service": "greengrass.amazonaws.com"},"Action": "sts:AssumeRole"}]}'|jq -r ".Role.Arn")
 
@@ -17,12 +17,71 @@ echo $IAM_ROLE_ARN
 
 ```
 
+## Start 3 EC2 Instance
+```
+AMI_ID=$(aws ssm get-parameters --names /aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2 --region $AWS_REGION|jq -r '.Parameters[0].Value')
 
-## EC2 Greengrass Device
+SUBNET_ID=$(aws ec2 describe-subnets  --filters Name=tag:Name,Values="Public Subnet 1" --region $AWS_REGION --query "Subnets[0].SubnetId" --o text)
+
+SECURITY_GROUP=$(aws ec2 describe-security-groups --filters Name=tag:Name,Values=BastionSecurityGroup --region $AWS_REGION | jq -r '.SecurityGroups[].GroupId')
+
+cat <<EOF > user-data.txt
+#!/bin/bash
+echo "test123" | passwd root --stdin
+sed -i "s#PasswordAuthentication no#PasswordAuthentication yes#" /etc/ssh/sshd_config
+systemctl restart sshd
+EOF
+
+aws ec2 run-instances \
+--image-id $AMI_ID \
+--instance-type t3.micro \
+--count 1 \
+--security-group-ids $SECURITY_GROUP \
+--subnet-id $SUBNET_ID \
+--iam-instance-profile Name=Test-Role \
+--tag-specifications 'ResourceType=instance,Tags=[{Key=Name,Value=GreengrassCore}]' \
+--block-device-mappings 'DeviceName=/dev/xvda,Ebs={VolumeType=gp3,VolumeSize=8,DeleteOnTermination=true}' \
+--region $AWS_REGION \
+--private-ip-address 10.20.1.200 \
+--user-data file://user-data.txt
+
+aws ec2 run-instances \
+--image-id $AMI_ID \
+--instance-type t3.micro \
+--count 1 \
+--security-group-ids $SECURITY_GROUP \
+--subnet-id $SUBNET_ID \
+--iam-instance-profile Name=Test-Role \
+--tag-specifications 'ResourceType=instance,Tags=[{Key=Name,Value=Button}]' \
+--block-device-mappings 'DeviceName=/dev/xvda,Ebs={VolumeType=gp3,VolumeSize=8,DeleteOnTermination=true}' \
+--region $AWS_REGION \
+--private-ip-address 10.20.1.210 \
+--user-data file://user-data.txt
+
+aws ec2 run-instances \
+--image-id $AMI_ID \
+--instance-type t3.micro \
+--count 1 \
+--security-group-ids $SECURITY_GROUP \
+--subnet-id $SUBNET_ID \
+--iam-instance-profile Name=Test-Role \
+--tag-specifications 'ResourceType=instance,Tags=[{Key=Name,Value=Display}]' \
+--block-device-mappings 'DeviceName=/dev/xvda,Ebs={VolumeType=gp3,VolumeSize=8,DeleteOnTermination=true}' \
+--region $AWS_REGION \
+--private-ip-address 10.20.1.220 \
+--user-data file://user-data.txt
+
+```
+
+## AWS Console 
+- create greengrass core and device
+
+## Systems Manager - EC2 Greengrass Device
 
 ### add new user
 ```
 sudo su
+cd
 adduser --system ggc_user
 groupadd --system ggc_group
 ```
@@ -39,11 +98,52 @@ wget https://d1onfpft10uf5o.cloudfront.net/greengrass-core/downloads/1.11.0/gree
 tar -xzvf greengrass-linux-x86-64-1.11.0.tar.gz -C /
 
 ```
-- download certs
+### upload certs
+- cloud9 to upload core certs
 ```
-scp -i "KeyPair-Mark-Virginia.pem" /Users/markxue/Downloads/89e1fbff11-setup.tar.gz ec2-user@ec2-3-92-83-217.compute-1.amazonaws.com:/home/ec2-user/greengrass
+scp 217bdf0210-setup.tar.gz root@10.20.1.200:~
+```
 
-tar -xzvf 89e1fbff11-setup.tar.gz -C /greengrass
+### install certs
+- EC2 Greengrass Core
+```
+tar -xzvf 217bdf0210-setup.tar.gz -C /greengrass
+
+cd /greengrass/certs/
+
+wget -O root.ca.pem https://www.amazontrust.com/repository/AmazonRootCA1.pem
+
+```
+
+
+
+
+
+## AWS Console 
+- create greengrass core and device
+
+## TestInstance - get greengrass core cert
+```
+GREENGRASS_GROUP_ID=$(aws greengrass list-groups --query "Groups[?Name=='RatchetG01'].Id" --o text)
+
+GROUP_CERTIFICATE_AUTHORITY_ID=$(aws greengrass list-group-certificate-authorities --group-id $GREENGRASS_GROUP_ID|jq -r ".GroupCertificateAuthorities[0].GroupCertificateAuthorityId")
+
+CORE_CA_CERT=$(aws greengrass get-group-certificate-authority --group-id $GREENGRASS_GROUP_ID --certificate-authority-id $GROUP_CERTIFICATE_AUTHORITY_ID|jq -r ".PemEncodedCertificate")
+
+echo -e "cat <<EOF > RatchetG01_Core_CA.pem\n$CORE_CA_CERT\nEOF"
+# run command in below EC2.
+```
+
+## AWS Console 
+- open cloud9
+- download certs
+- upload to cloud9
+```
+scp 
+
+tar -xzvf xxx-setup.tar.gz -C /greengrass
+
+
 
 cd /greengrass/certs/
 
@@ -59,17 +159,7 @@ wget -O root.ca.pem https://www.amazontrust.com/repository/AmazonRootCA1.pem
 
 - lambda installation path: ls -l /greengrass/ggc/deployment/lambda
 
-## get greengrass core cert
-```
-GREENGRASS_GROUP_ID=$(aws greengrass list-groups --query "Groups[?Name=='RatchetG01'].Id" --o text)
 
-GROUP_CERTIFICATE_AUTHORITY_ID=$(aws greengrass list-group-certificate-authorities --group-id $GREENGRASS_GROUP_ID|jq -r ".GroupCertificateAuthorities[0].GroupCertificateAuthorityId")
-
-CORE_CA_CERT=$(aws greengrass get-group-certificate-authority --group-id $GREENGRASS_GROUP_ID --certificate-authority-id $GROUP_CERTIFICATE_AUTHORITY_ID|jq -r ".PemEncodedCertificate")
-
-echo -e "cat <<EOF > RatchetG01_Core_CA.pem\n$CORE_CA_CERT\nEOF"
-# run command in below EC2.
-```
 
 ## EC2 Display
 ```
