--- a/5.secure_tunnel.md
+++ b/5.secure_tunnel.md
@@ -112,3 +112,13 @@ cp libcrypto.so.1.1 /usr/lib64/
 ```
 ssh root@localhost -p 5555
 ```
+
+- 通知：$aws/things/thing-name/tunnels/notify
+```
+{
+    "clientAccessToken": "destination-client-access-token",
+    "clientMode": "destination",
+    "region": "aws-region",
+    "services": ["destination-service"]
+}
+```
