--- a/7.greengrass_v1.md
+++ b/7.greengrass_v1.md
@@ -75,8 +75,9 @@ aws ec2 run-instances \
 
 ## AWS Console 
 - create greengrass core and device
+- download greengrass core certs
 
-## Systems Manager - EC2 Greengrass Device
+## Systems Manager - EC2 Greengrass Core
 
 ### add new user
 ```
@@ -86,10 +87,15 @@ adduser --system ggc_user
 groupadd --system ggc_group
 ```
 
-### install jdk1.8:
+### install jdk1.8
 ```
 yum install java-1.8.0-openjdk -y
 ```
+### install python3
+```
+yum install -y python3
+```
+
 ### install greengrass core
 
 ```
@@ -114,363 +120,193 @@ cd /greengrass/certs/
 wget -O root.ca.pem https://www.amazontrust.com/repository/AmazonRootCA1.pem
 
 ```
-
-
-
-
-
-## AWS Console 
-- create greengrass core and device
-
-## TestInstance - get greengrass core cert
-```
-GREENGRASS_GROUP_ID=$(aws greengrass list-groups --query "Groups[?Name=='RatchetG01'].Id" --o text)
-
-GROUP_CERTIFICATE_AUTHORITY_ID=$(aws greengrass list-group-certificate-authorities --group-id $GREENGRASS_GROUP_ID|jq -r ".GroupCertificateAuthorities[0].GroupCertificateAuthorityId")
-
-CORE_CA_CERT=$(aws greengrass get-group-certificate-authority --group-id $GREENGRASS_GROUP_ID --certificate-authority-id $GROUP_CERTIFICATE_AUTHORITY_ID|jq -r ".PemEncodedCertificate")
-
-echo -e "cat <<EOF > RatchetG01_Core_CA.pem\n$CORE_CA_CERT\nEOF"
-# run command in below EC2.
-```
-
-## AWS Console 
-- open cloud9
-- download certs
-- upload to cloud9
-```
-scp 
-
-tar -xzvf xxx-setup.tar.gz -C /greengrass
-
-
-
-cd /greengrass/certs/
-
-wget -O root.ca.pem https://www.amazontrust.com/repository/AmazonRootCA1.pem
-
-```
-- start greengrass core
+### start greengrass core
 ```
 /greengrass/ggc/core/greengrassd start
 ```
 
 - runtime log path: /greengrass/ggc/var/log/system/*
-
 - lambda installation path: ls -l /greengrass/ggc/deployment/lambda
 
+## Systems Manager - EC2 Greengrass Device
 
+## TestInstance - get greengrass core cert
+```
+export AWS_REGION=ap-southeast-1
+GREENGRASS_GROUP_ID=$(aws greengrass list-groups --query "Groups[?Name=='RatchetG01'].Id" --region $AWS_REGION --o text)
 
-## EC2 Display
+GROUP_CERTIFICATE_AUTHORITY_ID=$(aws greengrass list-group-certificate-authorities --group-id $GREENGRASS_GROUP_ID  --region $AWS_REGION|jq -r ".GroupCertificateAuthorities[0].GroupCertificateAuthorityId")
+
+CORE_CA_CERT=$(aws greengrass get-group-certificate-authority --group-id $GREENGRASS_GROUP_ID --certificate-authority-id $GROUP_CERTIFICATE_AUTHORITY_ID  --region $AWS_REGION |jq -r ".PemEncodedCertificate")
+
+echo -e "cat <<EOF > RatchetG01_Core_CA.pem\n$CORE_CA_CERT\nEOF"
 ```
 
-ssh -i "KeyPair-Mark-Virginia.pem" ec2-user@ec2-18-209-66-24.compute-1.amazonaws.com
-
-scp -i "KeyPair-Mark-Virginia.pem" /Users/markxue/Desktop/Mark/git/workshop-iot/Greengrass_Device_Ratchet_Display.py ec2-user@ec2-18-209-66-24.compute-1.amazonaws.com:/home/ec2-user/
-
-yum install -y python3
-
-pip3 install AWSIoTPythonSDK
-
-python3 Greengrass_Device_Ratchet_Display.py
-
+### EC2 Greengrass Display
+### upload certs
+- cloud9 to upload core certs
 ```
-
-
-## EC2 Button
+scp 84b525c035-setup.tar.gz root@10.20.1.220:~
 ```
-
-ssh -i "KeyPair-Mark-Virginia.pem" ec2-user@ec2-18-215-152-230.compute-1.amazonaws.com
-
-scp -i "KeyPair-Mark-Virginia.pem" /Users/markxue/Desktop/Mark/git/workshop-iot/Greengrass_Device_Ratchet_Button.py ec2-user@ec2-18-215-152-230.compute-1.amazonaws.com:/home/ec2-user/
-
-
-yum install -y python3
-
-pip3 install AWSIoTPythonSDK
-
-python3 Greengrass_Device_Ratchet_Button.py 
-
-```
-
-
-
-
-
-
-
-
-## Lambda
-- create role for EC2 Button
-```
-ROLE_NAME=IoTRole_EC2_Greengrass_v1_Button
-
-IAM_ROLE_ARN=$(aws iam create-role --role-name $ROLE_NAME --assume-role-policy-document '{"Version": "2012-10-17","Statement": [{"Sid": "","Effect": "Allow","Principal": {"Service": "ec2.amazonaws.com"},"Action": "sts:AssumeRole"}]}'|jq -r ".Role.Arn")
-
-aws iam attach-role-policy --role-name $ROLE_NAME --policy-arn arn:aws:iam::aws:policy/service-role/AWSGreengrassReadOnlyAccess
-
-echo $IAM_ROLE_ARN
-
-```
-
-
-
-```
-GREENGRASS_GROUP_ID=$(aws greengrass list-groups --query "Groups[?Name=='RatchetG01'].Id" --o text)
-GROUP_CERTIFICATE_AUTHORITY_ID=$(aws greengrass list-group-certificate-authorities --group-id 
-
-$GREENGRASS_GROUP_ID|jq -r ".GroupCertificateAuthorities[0].GroupCertificateAuthorityId")
-
-aws greengrass get-group-certificate-authority --group-id $GREENGRASS_GROUP_ID --certificate-authority-id $GROUP_CERTIFICATE_AUTHORITY_ID|jq -r ".PemEncodedCertificate" > RatchetG01_Core_CA.pem
-
-```
-
-
-scp -i "KeyPair-Mark-Virginia.pem" /Users/markxue/Downloads/d48d11421e-setup.tar.gz ec2-user@ec2-54-227-20-169.compute-1.amazonaws.com:/home/ec2-user/
-
-
-scp -i "KeyPair-Mark-Virginia.pem" /Users/markxue/Downloads/f3e29405cf-setup.tar.gz ec2-user@ec2-54-210-32-250.compute-1.amazonaws.com:/home/ec2-user/
-
-
-
-
-
-
-
-
-
-
-
-
-
-## EC2
+### install certs
+- EC2 Greengrass Display
 ```
 sudo su
-adduser --system ggc_user
-groupadd --system ggc_group
-```
-
-- install jdk1.8:
-```
-yum install java-1.8.0-openjdk -y
-```
-
-- download greengrass 1.11
-```
-wget https://d1onfpft10uf5o.cloudfront.net/greengrass-core/downloads/1.11.0/greengrass-linux-x86-64-1.11.0.tar.gz
-
-
-refer: https://docs.aws.amazon.com/greengrass/v2/developerguide/provision-minimal-iam-policy.html
-```
-cat <<EOF > greengrass__user_policy.json
-{
-  "Version": "2012-10-17",
-  "Statement": [
-    {
-      "Effect": "Allow",
-      "Action": [
-        "iot:AddThingToThingGroup",
-        "iot:AttachPolicy",
-        "iot:AttachThingPrincipal",
-        "iot:CreateKeysAndCertificate",
-        "iot:CreatePolicy",
-        "iot:CreateRoleAlias",
-        "iot:CreateThing",
-        "iot:CreateThingGroup",
-        "iot:DescribeEndpoint",
-        "iot:DescribeRoleAlias",
-        "iot:DescribeThingGroup",
-        "iot:GetPolicy",
-        "iam:GetRole",
-        "iam:CreateRole",
-        "iam:PassRole",
-        "iam:CreatePolicy",
-        "iam:AttachRolePolicy",
-        "iam:GetPolicy",
-        "sts:GetCallerIdentity"
-      ],
-      "Resource": "*"
-    },
-    {
-      "Sid": "DeployDevTools",
-      "Effect": "Allow",
-      "Action": [
-        "greengrass:CreateDeployment",
-        "iot:CancelJob",
-        "iot:CreateJob",
-        "iot:DeleteThingShadow",
-        "iot:DescribeJob",
-        "iot:DescribeThing",
-        "iot:DescribeThingGroup",
-        "iot:GetThingShadow",
-        "iot:UpdateJob",
-        "iot:UpdateThingShadow"
-      ],
-      "Resource": "*"
-    }
-  ]
-}
-EOF
-
-
-USER_NAME=IoTGreengrassUser
-
-aws iam create-user --user-name $USER_NAME
-
-aws iam put-user-policy --user-name $USER_NAME --policy-name policy --policy-document file://greengrass_user_policy.json
-
-ACCESS_KEY_INFO=$(aws iam create-access-key --user-name $USER_NAME)
-
-
-export AWS_ACCESS_KEY_ID=$(echo $ACCESS_KEY_INFO|jq -r '.AccessKey.AccessKeyId')
-export AWS_SECRET_ACCESS_KEY=$(echo $ACCESS_KEY_INFO|jq -r '.AccessKey.SecretAccessKey')
-
-echo $AWS_ACCESS_KEY_ID
-echo $AWS_SECRET_ACCESS_KEY
-
-```
-
-## create iot thing group
-```
-aws iot create-thing-group --thing-group-name $GREENGRASS_THING_GROUP
-```
-
-## Env
-```
-sudo su
-GREENGRASS_THING_GROUP=mark_greengrass_group
-GREENGRASS_THING_NAME=mark_greengrass_thing
-AWS_REGION=us-east-1
-```
-
-## install jdk1.8:
-```
-yum install java-1.8.0-openjdk -y
-```
-
-## install python3:
-```
+cd
 yum install -y python3
-```
+pip3 install AWSIoTPythonSDK
 
-
-## install greengrass core software
-- download installer
+tar -xzvf 84b525c035-setup.tar.gz
 ```
-cd ~
-curl -s https://d2s8p88vqu9w66.cloudfront.net/releases/greengrass-nucleus-latest.zip > greengrass-nucleus-latest.zip
-unzip greengrass-nucleus-latest.zip -d GreengrassCore && rm greengrass-nucleus-latest.zip
-
-mkdir greengrass
+- copy and paste RatchetG01_Core_CA.pem from TestInstance
+- python program
 ```
-- install
-```
-java -Droot="/greengrass" -Dlog.store=FILE \
-            -jar ./GreengrassCore/lib/Greengrass.jar \
-            --aws-region $AWS_REGION \
-            --thing-name $GREENGRASS_THING_NAME \
-            --thing-group-name $GREENGRASS_THING_GROUP \
-            --component-default-user root:root \
-            --tes-role-name GreengrassV2TokenExchangeRole \
-            --tes-role-alias-name GreengrassV2TokenExchangeRoleAlias \
-            --provision true \
-            --setup-system-service true \
-            --deploy-dev-tools true
-```
-- status
-```
-sudo systemctl status greengrass
-```
-
-## run HelloWorld program on Greengrass client
-- greengrass client component
-```
-/greengrass/bin/greengrass-cli component list
-```
-
-- attach s3 getobject policy
-```
-cat <<EOF > s3_getobject_policy.json
-{
-  "Version": "2012-10-17",
-  "Statement": [
-    {
-      "Effect": "Allow",
-      "Action": [
-        "s3:GetObject"
-      ],
-      "Resource": "*"
-    }
-  ]
-}
-EOF
-
-aws iam put-role-policy --role-name GreengrassV2TokenExchangeRole --policy-name policy1 --policy-document file://s3_getobject_policy.json
-
-```
-- upload python program to s3
-```
-cat <<EOF > greengrass_component_helloworld.py
-import time
+cat <<EOF > ratchet_display.py
+# Ratchet_Display Test Client
 import sys
+import ssl
+from AWSIoTPythonSDK.MQTTLib import AWSIoTMQTTClient
+import json
+import time
+import argparse
 
-message = ''
+parser = argparse.ArgumentParser(description='Greengrass Device')
+parser.add_argument('-t', '--topic', required=True)
+parser.add_argument('-e', '--endpoint', required=True)
+parser.add_argument('-c', '--cert', required=True)
+parser.add_argument('-k', '--key', required=True)
+parser.add_argument('-r', '--rootca', required=False, default='certs/rootCA.pem')
+args = parser.parse_args()
 
-if len(sys.argv)>1:
-    message = sys.argv[1]
+# Custom MQTT message callback
+def customCallback(client, userdata, message):
+  print("Received a new message: ")
+  print(message.payload)
+  print("from topic: ")
+  print(message.topic)
+  print("--------------\n")
+  print("Do something ......\n\n")
 
-print(time.strftime('%Y-%m-%d %H:%M:%S', time.localtime(time.time())), 'hello', message)
+mqttc = AWSIoTMQTTClient("Ratchet_Display")
+
+# Make sure you use your GGC end-point!!
+mqttc.configureEndpoint(args.endpoint,8883)
+mqttc.configureCredentials(args.rootca,args.key,args.cert)
+
+#Connect and subscribe to AWS IoT Greengrass
+mqttc.connect()
+print("Connected to the Greengrass core!")
+mqttc.subscribe(args.topic, 1, customCallback)
+time.sleep(2)
+
+# Publish to the same topic in a loop forever
+loopCount = 0
+while True:
+  message = {}
+  message['message'] = "Everything is OK!"
+  message['key'] = "ACTION"
+  message['sequence'] = loopCount
+  messageJson = json.dumps(message)
+  if loopCount % 10 == 0:
+    mqttc.publish(args.topic, messageJson, 0)
+    print('Published message: %s\n' % messageJson)
+  loopCount += 1
+  time.sleep(1)
+
+mqttc.disconnect()
+time.sleep(2)
+
 EOF
 ```
+- run py
+```
+python3 ratchet_display.py -t /ratchet-lcd -e 10.20.1.200 -c 84b525c035.cert.pem -k 84b525c035.private.key -r RatchetG01_Core_CA.pem
+```
 
+### EC2 Greengrass Button
+### upload certs
+- cloud9 to upload core certs
 ```
-aws s3 cp greengrass_component_helloworld.py s3://markxue-virginia-iot/artifacts/greengrass.HelloWorld/1.0.0/
+scp 5178efa817-setup.tar.gz root@10.20.1.210:~
 ```
+### install certs
+- EC2 Greengrass Button
+```
+sudo su
+cd
+yum install -y python3
+pip3 install AWSIoTPythonSDK
 
-- IoT Greengrass Component
+tar -xzvf 84b525c035-setup.tar.gz
 ```
-cat <<EOF > greengrass_component_recipe_helloworld.json
-{
-  "RecipeFormatVersion": "2020-01-25",
-  "ComponentName": "greengrass.HelloWorld",
-  "ComponentVersion": "1.0.0",
-  "ComponentType": "aws.greengrass.generic",
-  "ComponentDescription": "Mark Helloworld AWS IoT Greengrass component.",
-  "ComponentPublisher": "Mark",
-  "ComponentConfiguration": {
-    "DefaultConfiguration": {
-      "Message": "world mark greengrass"
-    }
-  },
-  "Manifests": [
-    {
-      "Platform": {
-        "os": "linux"
-      },
-      "Name": "Linux",
-      "Lifecycle": {
-        "Run": "python3 {artifacts:path}/greengrass_component_helloworld.py '{configuration:/Message}'\n"
-      },
-      "Artifacts": [
-        {
-          "Uri": "s3://markxue-virginia-iot/artifacts/greengrass.HelloWorld/1.0.0/greengrass_component_helloworld.py"
-        }
-      ]
-    }
-  ],
-  "Lifecycle": {}
+- copy and paste RatchetG01_Core_CA.pem from TestInstance
+- python program
+```
+cat <<EOF > ratchet_button.py
+
+# Ratchet_Button Test Client
+import sys
+import ssl
+from AWSIoTPythonSDK.MQTTLib import AWSIoTMQTTClient
+import json
+import time
+import random
+import argparse
+
+parser = argparse.ArgumentParser(description='Greengrass Device')
+parser.add_argument('-t', '--topic', required=True)
+parser.add_argument('-e', '--endpoint', required=True)
+parser.add_argument('-c', '--cert', required=True)
+parser.add_argument('-k', '--key', required=True)
+parser.add_argument('-r', '--rootca', required=False, default='certs/rootCA.pem')
+args = parser.parse_args()
+
+mqttc = AWSIoTMQTTClient("Ratchet_Button")
+
+# Make sure you use your GGC end-point!!
+mqttc.configureEndpoint(args.endpoint,8883)
+mqttc.configureCredentials(args.rootca,args.key,args.cert)
+
+#Function to encode a payload into JSON
+def json_encode(string):
+    return json.dumps(string)
+
+mqttc.json_encode=json_encode
+
+myStatus = random.randint(0,1)
+message ={
+  'message': "Hello from our Ratchet_Button Device",
+  'key': "ENTER",
+  'state': myStatus
 }
+
+#Encoding into JSON
+message = mqttc.json_encode(message)
+
+mqttc.connect()
+
+print("Connected to the Greengrass core!")
+
+mqttc.publish(args.topic, message, 0)
+
+print("Message Published! state is ", myStatus)
+
+mqttc.disconnect()
+time.sleep(2)
+
 EOF
-
-aws greengrassv2 create-component-version \
-    --inline-recipe fileb://greengrass_component_recipe_helloworld.json
-
 ```
+- run py
 ```
-/greengrass/bin/greengrass-cli component restart --names "greengrass.HelloWorld"
+python3 ratchet_button.py -t /ratchet -e 10.20.1.200 -c 5178efa817.cert.pem -k 5178efa817.private.key -r RatchetG01_Core_CA.pem
 ```
 
+
+## publish message from AWS Console
 ```
-tail -f /greengrass/logs/greengrass.log
-tail -f /greengrass/logs/greengrass.HelloWorld.log
+{
+  "message": "Hello from our Cloud",
+  "key": "ENTER",
+  "state": 0
+}
 ```
