--- a/7.greengrass_v1.md
+++ b/7.greengrass_v1.md
@@ -1,6 +1,6 @@
 
-# Test Greengrass
-refer: https://docs.aws.amazon.com/greengrass/v2/developerguide/getting-started.html
+# Test Greengrass V1
+refer: http://iot.awsworkshops.com/aws-greengrass/lab17-greengrassbasics/
 
 
 ## create IAM role for Greengrass group role
