--- a/5.secure_tunnel.md
+++ b/5.secure_tunnel.md
@@ -4,22 +4,6 @@ refer:
 https://docs.aws.amazon.com/iot/latest/developerguide/secure-tunneling-tutorial.html
 https://github.com/aws-samples/aws-iot-securetunneling-localproxy
 
-
-## Create secure tunnel on Console
-- open secure tunnel
-- get Access token for destination
-- get Access token for source
-```
-OPEN_TUNNEL=$(aws iotsecuretunneling open-tunnel --region $AWS_REGION )
-
-SOURCE_ACCESS_TOKEN=$(echo $OPEN_TUNNEL|jq -r '.sourceAccessToken')
-DESTINATION_ACCESS_TOKEN=$(echo $OPEN_TUNNEL|jq -r '.destinationAccessToken')
-
-echo -e "SOURCE_ACCESS_TOKEN:\n$SOURCE_ACCESS_TOKEN"
-echo -e "DESTINATION_ACCESS_TOKEN:\n$DESTINATION_ACCESS_TOKEN"
-
-```
-
 ## start two EC2 instance
 ```
 
@@ -62,7 +46,24 @@ aws ec2 run-instances \
 --private-ip-address 10.20.1.110 \
 --user-data file://user-data.txt
 ```
-## Remote Thing - Destination
+
+## Create secure tunnel on Console
+- open secure tunnel
+- get Access token for destination
+- get Access token for source
+```
+OPEN_TUNNEL=$(aws iotsecuretunneling open-tunnel --region $AWS_REGION )
+
+SOURCE_ACCESS_TOKEN=$(echo $OPEN_TUNNEL|jq -r '.sourceAccessToken')
+DESTINATION_ACCESS_TOKEN=$(echo $OPEN_TUNNEL|jq -r '.destinationAccessToken')
+
+echo -e "SOURCE_ACCESS_TOKEN:\n$SOURCE_ACCESS_TOKEN"
+echo -e "DESTINATION_ACCESS_TOKEN:\n$DESTINATION_ACCESS_TOKEN"
+
+```
+
+
+## Systems Manager - Remote Thing - Destination
 
 ### Install localproxy
 ```
@@ -86,7 +87,7 @@ cp libcrypto.so.1.1 /usr/lib64/
 ```
 - replace destinationAccessToken
 
-## Local - Source
+## Systems Manager - Local - Source
 
 ### Install localproxy
 ```
@@ -113,7 +114,7 @@ cp libcrypto.so.1.1 /usr/lib64/
 ssh root@localhost -p 5555
 ```
 
-- 通知：$aws/things/thing-name/tunnels/notify
+## $aws/things/thing-name/tunnels/notify
 ```
 {
     "clientAccessToken": "destination-client-access-token",
