--- a/7.greengrass_v1.md
+++ b/7.greengrass_v1.md
@@ -17,6 +17,38 @@ echo $IAM_ROLE_ARN
 
 ```
 
+## create IAM role for Lambda
+
+```
+ROLE_NAME=LambdaRole
+
+IAM_ROLE_ARN=$(aws iam create-role --role-name $ROLE_NAME --assume-role-policy-document '{"Version": "2012-10-17","Statement": [{"Sid": "","Effect": "Allow","Principal": {"Service": "lambda.amazonaws.com"},"Action": "sts:AssumeRole"}]}'|jq -r ".Role.Arn")
+
+cat <<EOF > lambda_policy.json
+{
+    "Version": "2012-10-17",
+    "Statement": [
+        {
+            "Sid": "VisualEditor0",
+            "Effect": "Allow",
+            "Action": [
+                "logs:*",
+                "iot:*",
+                "dynamodb:*"
+
+            ],
+            "Resource": "*"
+        }
+    ]
+}
+EOF
+
+aws iam put-role-policy --role-name $ROLE_NAME --policy-name policy --policy-document file://lambda_policy.json
+
+echo $IAM_ROLE_ARN
+
+```
+
 ## Start 3 EC2 Instance
 ```
 AMI_ID=$(aws ssm get-parameters --names /aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2 --region $AWS_REGION|jq -r '.Parameters[0].Value')
@@ -107,17 +139,22 @@ tar -xzvf greengrass-linux-x86-64-1.11.0.tar.gz -C /
 ### upload certs
 - cloud9 to upload core certs
 ```
-scp 217bdf0210-setup.tar.gz root@10.20.1.200:~
+scp xxx-setup.tar.gz root@10.20.1.200:~
 ```
+- password: test123
 
 ### install certs
 - EC2 Greengrass Core
 ```
-tar -xzvf 217bdf0210-setup.tar.gz -C /greengrass
+tar -xzvf xxx-setup.tar.gz -C /greengrass
 
 cd /greengrass/certs/
 
 wget -O root.ca.pem https://www.amazontrust.com/repository/AmazonRootCA1.pem
+
+pwd
+
+ls
 
 ```
 ### start greengrass core
@@ -142,11 +179,11 @@ CORE_CA_CERT=$(aws greengrass get-group-certificate-authority --group-id $GREENG
 echo -e "cat <<EOF > RatchetG01_Core_CA.pem\n$CORE_CA_CERT\nEOF"
 ```
 
-### EC2 Greengrass Display
+## Systems Manager - EC2 Greengrass Display
 ### upload certs
 - cloud9 to upload core certs
 ```
-scp 84b525c035-setup.tar.gz root@10.20.1.220:~
+scp xxx-setup.tar.gz root@10.20.1.220:~
 ```
 ### install certs
 - EC2 Greengrass Display
@@ -155,8 +192,10 @@ sudo su
 cd
 yum install -y python3
 pip3 install AWSIoTPythonSDK
-
-tar -xzvf 84b525c035-setup.tar.gz
+```
+- uncompress
+```
+tar -xzvf xxx-setup.tar.gz
 ```
 - copy and paste RatchetG01_Core_CA.pem from TestInstance
 - python program
@@ -220,14 +259,14 @@ EOF
 ```
 - run py
 ```
-python3 ratchet_display.py -t /ratchet-lcd -e 10.20.1.200 -c 84b525c035.cert.pem -k 84b525c035.private.key -r RatchetG01_Core_CA.pem
+python3 ratchet_display.py -t /ratchet-lcd -e 10.20.1.200 -c xxx.cert.pem -k xxx.private.key -r RatchetG01_Core_CA.pem
 ```
 
-### EC2 Greengrass Button
+## Systems Manager - EC2 Greengrass Button
 ### upload certs
 - cloud9 to upload core certs
 ```
-scp 5178efa817-setup.tar.gz root@10.20.1.210:~
+scp xxx-setup.tar.gz root@10.20.1.210:~
 ```
 ### install certs
 - EC2 Greengrass Button
@@ -236,8 +275,10 @@ sudo su
 cd
 yum install -y python3
 pip3 install AWSIoTPythonSDK
-
-tar -xzvf 84b525c035-setup.tar.gz
+```
+- uncompress
+```
+tar -xzvf xxx-setup.tar.gz
 ```
 - copy and paste RatchetG01_Core_CA.pem from TestInstance
 - python program
@@ -298,7 +339,7 @@ EOF
 ```
 - run py
 ```
-python3 ratchet_button.py -t /ratchet -e 10.20.1.200 -c 5178efa817.cert.pem -k 5178efa817.private.key -r RatchetG01_Core_CA.pem
+python3 ratchet_button.py -t /ratchet -e 10.20.1.200 -c xxx.cert.pem -k xxx.private.key -r RatchetG01_Core_CA.pem
 ```
 
 
