--- a/7.greengrass_v1_new.md
+++ b/7.greengrass_v1_new.md
@@ -166,7 +166,7 @@ ls
 - lambda installation path: ls -l /greengrass/ggc/deployment/lambda
 
 
-## Lambda 
+## Lambda - TestInstance
 
 ### Lambda - Hello
 ```
@@ -200,8 +200,6 @@ aws lambda create-function \
 
 ```
 
-
-
 ## Systems Manager - EC2 Greengrass Device
 
 ## TestInstance - get greengrass core cert
@@ -216,25 +214,44 @@ CORE_CA_CERT=$(aws greengrass get-group-certificate-authority --group-id $GREENG
 echo -e "cat <<EOF > RatchetG01_Core_CA.pem\n$CORE_CA_CERT\nEOF"
 ```
 
-## Systems Manager - EC2 Greengrass Display
-### upload certs
-- cloud9 to upload core certs
-```
-scp xxx-setup.tar.gz root@10.20.1.220:~
-```
-### install certs
-- EC2 Greengrass Display
+## Systems Manager - EC2 Greengrass Display (10.20.1.220)
+### create thing
+
 ```
 sudo su
 cd
+yum install -y jq
 yum install -y python3
 pip3 install AWSIoTPythonSDK
-```
-- uncompress
-```
-tar -xzvf xxx-setup.tar.gz
+
+export AWS_REGION=ap-southeast-1
+
+THING_NAME=Ratchet_Display
+
+THING_ARN=$(aws iot create-thing --thing-name $THING_NAME --region $AWS_REGION|jq -r ".thingArn")
+
+aws iot create-keys-and-certificate --set-as-active --region $AWS_REGION \
+  --public-key-outfile $THING_NAME.public.key \
+  --private-key-outfile $THING_NAME.private.key \
+  --certificate-pem-outfile $THING_NAME.certificate.pem > create_cert_and_keys_response
+
+CERTIFICATE_ARN=$(jq -r ".certificateArn" create_cert_and_keys_response)
+echo $CERTIFICATE_ARN
+
+
+POLICY_NAME=${THING_NAME}_policy
+aws iot create-policy --policy-name ${POLICY_NAME} --region $AWS_REGION  \
+  --policy-document '{"Version":"2012-10-17","Statement":[{"Effect":"Allow","Action": ["iot:Publish","iot:Receive","iot:Subscribe","iot:Connect"],"Resource":"*"}]}'
+
+aws iot attach-policy --policy-name $POLICY_NAME \
+  --target $CERTIFICATE_ARN --region $AWS_REGION 
+
+aws iot attach-thing-principal --thing-name $THING_NAME \
+  --principal $CERTIFICATE_ARN --region $AWS_REGION 
+
 ```
 - copy and paste RatchetG01_Core_CA.pem from TestInstance
+- add thing to Greengrass group
 - python program
 ```
 cat <<EOF > ratchet_display.py
@@ -296,28 +313,49 @@ EOF
 ```
 - run py
 ```
-python3 ratchet_display.py -t /ratchet-lcd -e 10.20.1.200 -c xxx.cert.pem -k xxx.private.key -r RatchetG01_Core_CA.pem
+python3 ratchet_display.py -t /ratchet-lcd -e 10.20.1.200 -c $THING_NAME.certificate.pem -k $THING_NAME.private.key -r RatchetG01_Core_CA.pem
 ```
 
-## Systems Manager - EC2 Greengrass Button
-### upload certs
-- cloud9 to upload core certs
-```
-scp xxx-setup.tar.gz root@10.20.1.210:~
-```
-### install certs
-- EC2 Greengrass Button
+
+
+## Systems Manager - EC2 Greengrass Button (10.20.1.210)
+### create thing
+
 ```
 sudo su
 cd
+yum install -y jq
 yum install -y python3
 pip3 install AWSIoTPythonSDK
-```
-- uncompress
-```
-tar -xzvf xxx-setup.tar.gz
+
+export AWS_REGION=ap-southeast-1
+
+THING_NAME=Ratchet_Button
+
+THING_ARN=$(aws iot create-thing --thing-name $THING_NAME --region $AWS_REGION|jq -r ".thingArn")
+
+aws iot create-keys-and-certificate --set-as-active --region $AWS_REGION \
+  --public-key-outfile $THING_NAME.public.key \
+  --private-key-outfile $THING_NAME.private.key \
+  --certificate-pem-outfile $THING_NAME.certificate.pem > create_cert_and_keys_response
+
+CERTIFICATE_ARN=$(jq -r ".certificateArn" create_cert_and_keys_response)
+echo $CERTIFICATE_ARN
+
+
+POLICY_NAME=${THING_NAME}_policy
+aws iot create-policy --policy-name ${POLICY_NAME} --region $AWS_REGION  \
+  --policy-document '{"Version":"2012-10-17","Statement":[{"Effect":"Allow","Action": ["iot:Publish","iot:Receive","iot:Subscribe","iot:Connect"],"Resource":"*"}]}'
+
+aws iot attach-policy --policy-name $POLICY_NAME \
+  --target $CERTIFICATE_ARN --region $AWS_REGION 
+
+aws iot attach-thing-principal --thing-name $THING_NAME \
+  --principal $CERTIFICATE_ARN --region $AWS_REGION 
+
 ```
 - copy and paste RatchetG01_Core_CA.pem from TestInstance
+- add thing to Greengrass group
 - python program
 ```
 cat <<EOF > ratchet_button.py
@@ -376,7 +414,7 @@ EOF
 ```
 - run py
 ```
-python3 ratchet_button.py -t /ratchet -e 10.20.1.200 -c xxx.cert.pem -k xxx.private.key -r RatchetG01_Core_CA.pem
+python3 ratchet_button.py -t /ratchet -e 10.20.1.200 -c $THING_NAME.certificate.pem -k $THING_NAME.private.key -r RatchetG01_Core_CA.pem
 ```
 
 
@@ -385,6 +423,14 @@ python3 ratchet_button.py -t /ratchet -e 10.20.1.200 -c xxx.cert.pem -k xxx.priv
 {
   "message": "Hello from our Cloud",
   "key": "ENTER",
-  "state": 1
+  "state": 2
 }
 ```
+
+
+
+
+
+
+
+
