--- a/8.serverless.md
+++ b/8.serverless.md
@@ -1,6 +1,5 @@
 
 # 8.Serverless
-refer: https://docs.aws.amazon.com/greengrass/v2/developerguide/getting-started.html
 
 ## Env
 ```
@@ -136,5 +135,5 @@ echo $API_ENDPOINT
 
 - curl url
 ```
-curl $API_ENDPOINT/iot_control=0
+curl $API_ENDPOINT/iot_control?state=0
 ```
