--- a/7.greengrass_v1_cn.md
+++ b/7.greengrass_v1_cn.md
@@ -124,7 +124,7 @@ aws ec2 run-instances \
 ```
 http://checkip.amazonaws.com/
 ```
-2.替换下面命令中的<MYIP>
+2.替换下面命令中的MYIP
 ```
 SECURITY_GROUP=$(aws ec2 describe-security-groups --filters Name=tag:Name,Values=BastionSecurityGroup | jq -r '.SecurityGroups[].GroupId')
 
@@ -164,11 +164,11 @@ aws lambda create-function \
 
 ```
 
-## 创建AWS Console - PPT介绍
+## AWS Console 操作 - PPT介绍
 - 创建Greengrass Group
 - 下载greengrass core 证书
 
-## Systems Manager - EC2 Greengrass Core
+## Systems Manager - EC2 Greengrass Core 配置
 1. 点击左上角“Services”，然后搜索“Systems Manager”
 2. 点击打开Systems Manager
 3. 在左面导航栏中，找到Session Manager
@@ -202,11 +202,6 @@ yum install -y python3
 ### 安装 greengrass core V1 软件
 
 ```
-wget https://d1onfpft10uf5o.cloudfront.net/greengrass-core/downloads/1.11.0/greengrass-linux-x86-64-1.11.0.tar.gz
-
-tar -xzvf greengrass-linux-x86-64-1.11.0.tar.gz -C /
-
-
 wget https://d1onfpft10uf5o.cloudfront.net/greengrass-core/downloads/1.11.3/greengrass-linux-x86-64-1.11.3.tar.gz
 
 tar -xzvf greengrass-linux-x86-64-1.11.3.tar.gz -C /
@@ -225,7 +220,6 @@ scp xxx-setup.tar.gz root@<IP>:~/greengrasscore-setup.tar.gz
 - 密码：test123
 
 ### 安装证书
-- 在EC2 GreengrassCore中，执行下面的命令。
 ```
 tar -xzvf greengrasscore-setup.tar.gz -C /greengrass
 
@@ -246,7 +240,7 @@ ls
 - runtime log path: /greengrass/ggc/var/log/system/*
 - lambda installation path: ls -l /greengrass/ggc/deployment/lambda
 
-### 得到 greengrass core 证书，需添加到其他device。
+### 得到 greengrass core 证书，需添加到其他device中。
 ```
 GREENGRASS_GROUP_ID=$(aws greengrass list-groups --query "Groups[?Name=='test'].Id" --o text)
 
@@ -258,7 +252,7 @@ echo -e "cat <<EOF > GreengrassGroupCore_CA.pem\n$CORE_CA_CERT\nEOF"
 
 ```
 
-## Systems Manager - EC2 Greengrass Display (10.20.1.220)
+## Systems Manager - EC2 Greengrass Display (10.20.1.220) 配置
 ### 创建物品 thing
 
 ```
@@ -295,8 +289,8 @@ aws iot attach-thing-principal --thing-name $THING_NAME \
   --principal $CERTIFICATE_ARN 
 
 ```
-- 从TestInstance虚机拷贝GreengrassGroupCore_CA.pem
-- 新建python program文件
+- 从GreengrassCore虚机拷贝GreengrassGroupCore_CA.pem
+- 新建python program测试程序
 ```
 cat <<EOF > greengrass_group_device_display.py
 # GreengrassGroup_Display Test Client
@@ -357,7 +351,7 @@ EOF
 
 ```
 
-## Systems Manager - EC2 Greengrass Button (10.20.1.210)
+## Systems Manager - EC2 Greengrass Button (10.20.1.210) 配置
 ### 创建物品 thing
 ```
 sudo su
@@ -393,8 +387,8 @@ aws iot attach-thing-principal --thing-name $THING_NAME \
   --principal $CERTIFICATE_ARN 
 
 ```
-- 从TestInstance虚机拷贝GreengrassGroupCore_CA.pem
-- 新建python program文件
+- 从GreengrassCore虚机拷贝GreengrassGroupCore_CA.pem
+- 新建python program测试程序
 ```
 cat <<EOF > greengrass_group_device_button.py
 
@@ -451,7 +445,7 @@ time.sleep(2)
 EOF
 
 ```
-## AWS Console - PPT介绍
+## AWS Console 操作 - PPT介绍
 
 ## 测试test
 ### Systems Manager - EC2 Greengrass Display (10.20.1.220)
@@ -482,15 +476,6 @@ python3 greengrass_group_device_button.py -t /ratchet -e 10.20.1.200 -c $THING_N
 ```
 /rachet-cloud
 ```
-- Message payload:
-```
-{
-  "message": "Hello from our Cloud",
-  "key": "ENTER",
-  "state": 2
-}
-```
-
 
 ### 从AWS Console发送控制控制命令
 - IOT > Test > MQTT test client > Publish to a topic
